--- a/frontend/hgkmedialib-frontend/tests/dataTest.html
+++ b/frontend/hgkmedialib-frontend/tests/dataTest.html
@@ -60,6 +60,8 @@
 
         <script src="../js/scriptaculous/src/scriptaculous.js" type="text/javascript"></script>
         <script src="../js/autocompleter.js" type="text/javascript"></script>
+ <script type="text/javascript" src="../inc/hgkmedialib-frontend/ajax-server.php?client=all&amp;stub=HGKMediaLib_AjaxServer_Read"></script>
+<script type="text/javascript" src="../inc/hgkmedialib-frontend/js/read.js"> </script>
 </head>
 <body>
     <h1>AJAX autocompletion demo</h1>
@@ -96,7 +98,7 @@ Just a little test:
 <div class="page_name_page_name_auto_complete" id="band_list" style="display:none"></div>
 
 <script type="text/javascript">
-new Autocompleter.Date('bands_from_the_70s', 'band_list', {});
+new Autocompleter.PearAjax('bands_from_the_70s', 'band_list','remoteReader.getActors', {});
 </script>
     
 
