--- a/frontend/hgkmedialib-frontend/tests/dataTest.html
+++ b/frontend/hgkmedialib-frontend/tests/dataTest.html
@@ -60,8 +60,8 @@
 
         <script src="../js/scriptaculous/src/scriptaculous.js" type="text/javascript"></script>
         <script src="../js/autocompleter.js" type="text/javascript"></script>
- <script type="text/javascript" src="../inc/hgkmedialib-frontend/ajax-server.php?client=all&amp;stub=HGKMediaLib_AjaxServer_Read"></script>
-<script type="text/javascript" src="../inc/hgkmedialib-frontend/js/read.js"> </script>
+ <script type="text/javascript" src="../ajax-server.php?client=all&amp;stub=HGKMediaLib_AjaxServer_Read"></script>
+<script type="text/javascript" src="../js/read.js"> </script>
 </head>
 <body>
     <h1>AJAX autocompletion demo</h1>
@@ -96,9 +96,9 @@ Just a little test:
 <br />
 <input id="bands_from_the_70s" autocomplete="off" size="40" type="text" value="" /></p>
 <div class="page_name_page_name_auto_complete" id="band_list" style="display:none"></div>
-
 <script type="text/javascript">
-new Autocompleter.PearAjax('bands_from_the_70s', 'band_list','remoteReader.getActors', {});
+var remoteReader   = new hgkmedialib_ajaxserver_read(readerCallback);
+new Autocompleter.PearAjax('bands_from_the_70s', 'band_list','remoteReader.getSuggestions', 'actors', {});
 </script>
     
 
